<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        >
        <TextView 
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:text="@string/title"
            />
    </LinearLayout>
    
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_margin="10dp"
	    >
	    <LinearLayout 
        	android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:orientation="vertical"
    		android:gravity="center"
        >
        
	        <TextView 
	            android:layout_width="wrap_content"
	    		android:layout_height="40dp"
	    		android:text="@string/password"
	    		android:textSize="15sp"
	    		android:gravity="center"
	            />
	        
	        <TextView 
	            android:layout_width="wrap_content"
	    		android:layout_height="40dp"
	    		android:text="@string/name"
	    		android:textSize="15sp"
	    		android:gravity="center"
	            />
	        
	        <TextView 
	            android:layout_width="wrap_content"
	    		android:layout_height="40dp"
	    		android:text="@string/area"
	    		android:textSize="15sp"
	    		android:gravity="center"
	            />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:layout_marginLeft="10dp"
	        >
	        
	        <EditText 
	            android:id="@id/input_password"
	            android:layout_width="200dp"
	    		android:layout_height="40dp"
	    		android:inputType="numberPassword"
	            />
	        
	        <EditText 
	            android:id="@id/input_name"
	            android:layout_width="200dp"
	    		android:layout_height="40dp"
	            />
	        
	        <Spinner 
	            android:id="@id/input_area"
	            android:layout_width="200dp"
	    		android:layout_height="40dp"
	            />
	            <!-- <TextView 
		            android:id="@id/input_area"
		            android:layout_width="200dp"
		    		android:layout_height="40dp"
		    		android:gravity="center"
		    		android:textSize="20sp"
	            /> -->
	        
	    </LinearLayout>
	</LinearLayout>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    >
	    <ListView 
		    android:id="@+id/arealist"
		    android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:dividerHeight="1dp"
	        android:background="#99669999"
	        android:visibility="gone"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	    />
	    <Button 
	        android:id="@id/bt_cancel"
	        android:layout_width="90dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/cancel"
	    	android:layout_marginLeft="25dp"
	        />
	    <Button 
	        android:id="@id/bt_confirm"
	        android:layout_width="90dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/confirm"
	    	android:layout_alignParentRight="true"
	    	android:layout_marginRight="25dp"
	        />
	</RelativeLayout>

</LinearLayout>