<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent" 
	>

	<Button 
        android:id="@id/save_timer"
        android:layout_width="60dp"
    	android:layout_height="40dp"
    	android:background="@drawable/add_timer_btn"
    	android:layout_alignParentRight="true"
    	android:layout_marginRight="10dp"
    	android:layout_marginTop="10dp"
    	android:text="@string/save"
    	android:textColor="@color/white"
        />
        <RelativeLayout 
        android:id="@+id/timer_layout"
    	android:layout_width="280dp"
	    android:layout_height="wrap_content" 
	    android:background="#99000000"
	    android:layout_centerInParent="true"
    	>
    		
        	<ImageView 
        	    android:id="@+id/close"
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:src="@drawable/close"
	            android:layout_margin="5dp"
        	    />
    	    
    	    <TextView 
    	        android:id="@+id/dialog_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	        	android:text="@string/choose_device"
	        	android:layout_margin="10dp"
	        	android:textSize="16sp"
	        	android:layout_alignParentTop="true"
	        	android:layout_centerHorizontal="true"
            	/>
        
	        <TextView 
	            android:id="@+id/select_device"
	            android:layout_width="100dp"
	            android:layout_height="40dp" 
	        	android:background="@color/black"
	        	android:text="@string/click"
	        	android:layout_margin="10dp"
	        	android:gravity="center"
	        	android:textSize="16sp"
	        	android:layout_below="@id/dialog_title"
	        	android:layout_centerHorizontal="true"
	            />
	            
		    <RelativeLayout
		        android:id="@+id/operation"
		        android:layout_below="@id/select_device"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		         >

		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:text="@string/action"
		            android:textSize="16sp" />

		        <TextView
		            android:id="@+id/open_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:layout_marginLeft="10dp"
		            android:text="@string/open"
		            android:textSize="16sp" />

		        <ImageView
		            android:id="@+id/open_check"
		            android:layout_width="25dp"
		            android:layout_height="25dp"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="10dp"
		            android:layout_toRightOf="@id/open_tv"
		            android:src="@drawable/frame_no_check" />

		        <TextView
		            android:id="@+id/close_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_marginLeft="10dp"
		            android:layout_toRightOf="@id/open_check"
		            android:text="@string/close"
		            android:textSize="16sp" />

		        <ImageView
		            android:id="@+id/close_check"
		            android:layout_width="25dp"
		            android:layout_height="25dp"
		        	android:layout_centerVertical="true"
		            android:layout_marginLeft="10dp"
		            android:layout_toRightOf="@id/close_tv"
		            android:src="@drawable/frame_no_check" />
		    </RelativeLayout>
		    
		    <TimePicker
	            android:id="@+id/timepicker"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="20dp" 
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/operation"
            	/>
    	    
		    <ListView 
	            android:id="@+id/device_list"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:dividerHeight="1dp"
		        android:background="@drawable/corner_textview"
		        android:layout_below="@id/select_device"
		        android:layout_centerHorizontal="true"
		        android:visibility="gone"
	            />
		    
    	</RelativeLayout>

</RelativeLayout>
