<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
     >
    
    <include layout="@layout/sub_layout"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/corner_bg"
    	android:orientation="vertical"
    	android:layout_margin="3dp"
        >
        
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/name_tip"
    		android:textColor="@color/black"
    		android:gravity="center"
            />
        
        <LinearLayout 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:gravity="center"
    		android:layout_margin="15dp"
            >
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/name"
    			android:layout_marginRight="10dp"
    			android:textSize="18sp"
                />
            
            <EditText 
                android:id="@+id/update_name_text"
                android:layout_width="150dp"
    			android:layout_height="40dp"
                />
        </LinearLayout>
        
        <View 
            android:layout_width="match_parent"
    		android:layout_height="1dp"
    		android:background="@color/white"
            />
        
        <Button 
            android:layout_width="80dp"
    		android:layout_height="wrap_content"
    		android:text="@string/confirm"
    		android:layout_gravity="center"
    		android:layout_margin="15dp"
    		android:onClick="confirm"
            />
        
    </LinearLayout>

</LinearLayout>