<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >
    
    <include layout="@layout/sub_layout"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_margin="3dp"
    	android:background="@drawable/corner_bg"
        >
        
        <RelativeLayout 
            android:layout_width="match_parent"
    		android:layout_height="70dp"
            >
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="12sp"
    			android:layout_centerHorizontal="true"
    			android:text="@string/input_password"
                />
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="18sp"
    			android:layout_centerVertical="true"
    			android:text="@string/old_password"
    			android:layout_marginLeft="30dp"
                />
            
            <EditText 
                android:id="@+id/old_password"
                android:layout_width="180dp"
    			android:layout_height="40dp"
    			android:layout_centerVertical="true"
    			android:layout_alignParentRight="true"
    			android:inputType="numberPassword"
    			android:layout_marginRight="20dp"/>
            
        </RelativeLayout>
        
        <View 
            android:layout_width="match_parent"
    		android:layout_height="1dp"
    		android:background="@color/white"
            />
        
        <RelativeLayout 
            android:layout_width="match_parent"
    		android:layout_height="60dp"
            >
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="18sp"
    			android:layout_centerVertical="true"
    			android:text="@string/new_password"
    			android:layout_marginLeft="30dp"
                />
            
            <EditText 
                android:id="@+id/new_password"
                android:layout_width="180dp"
    			android:layout_height="40dp"
    			android:inputType="numberPassword"
    			android:layout_centerVertical="true"
    			android:layout_alignParentRight="true"
    			android:layout_marginRight="20dp"/>
            
        </RelativeLayout>
        
        <View 
            android:layout_width="match_parent"
    		android:layout_height="1dp"
    		android:background="@color/white"
            />
        
        <RelativeLayout 
            android:layout_width="match_parent"
    		android:layout_height="60dp"
            >
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="18sp"
    			android:layout_centerVertical="true"
    			android:text="@string/repeat_password"
    			android:layout_marginLeft="30dp"
                />
            
            <EditText 
                android:id="@+id/repeat_password"
                android:layout_width="180dp"
    			android:layout_height="40dp"
    			android:inputType="numberPassword"
    			android:layout_centerVertical="true"
    			android:layout_alignParentRight="true"
    			android:layout_marginRight="20dp"/>
            
        </RelativeLayout>
        
        <View 
            android:layout_width="match_parent"
    		android:layout_height="1dp"
    		android:background="@color/white"
            />
        
        <RelativeLayout 
            android:layout_width="match_parent"
    		android:layout_height="60dp"
            >
            
            <Button 
                android:layout_width="80dp"
    			android:layout_height="wrap_content"
    			android:layout_centerInParent="true"
    			android:text="@string/confirm"
    			android:onClick="confirm"
                />
            
        </RelativeLayout>
        
        
    </LinearLayout>

</LinearLayout>